--- a/application/mobile/view/article/comment.html
+++ b/application/mobile/view/article/comment.html
@@ -62,7 +62,7 @@
 
         <div class="comment-wrap">
             <ul class="comment-list">
-                <li class="comment-item">
+                <!-- <li class="comment-item">
                     <div class="user-info">
                         <div class="avatar">
                             <img src="__STATIC__/img/public/0000avatar-img02@2x.png" />
@@ -90,7 +90,7 @@
                             <p class="name">李彬</p>
                             <p>
                                 <span class="date">二小时前</span>
-                                <!-- <span class="del">删除</span> -->
+                                <span class="del">删除</span>
                             </p>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                         <i class="triangle"></i>
                         <p>我拆开了一本，纸张有点薄，印刷体颜色有点淡，没有破的，五本书很轻，我也不懂是不是正版，也没正经看过正版书是什么样子的，习惯好评！！！</p>
                     </div>
-                </li>
+                </li> -->
             </ul>
         </div>
 
@@ -121,13 +121,21 @@
 
     <script>
         $(function () {
+            $('sendBtn').click(function(){
+                console.log('123');
+            });
             var counter = 0;
             // 每页展示4个
-            var num = 4;
+            var num = 3;
             var pageStart = 0, pageEnd = 0;
+            
+            var type = 1;
+            var page = 1; //页数
+            var count = 2;//返回记录数量
+            var id = '{$id}';
 
-            // dropload
             $('.comment-wrap').dropload({
+                
                 scrollArea: window,
                 domUp: {
                     domClass: 'dropload-up',
@@ -141,12 +149,15 @@
                     domLoad: '<div class="dropload-load"><span class="loading"></span>加载中...</div>',
                     domNoData: '<div class="dropload-noData">暂无数据</div>'
                 },
+
                 loadUpFn: function (me) {
                     $.ajax({
                         type: 'GET',
-                        url: './json/update.json',
+                        url: '/mobile/article/get_comment',
                         dataType: 'json',
+                        data: {'id':id,'type':type,'page':page,'count':count},
                         success: function (data) {
+                            // console.log(data)
                             var result = '';
                             for (var i = 0; i < data.lists.length; i++) {
                                 result += `
@@ -156,9 +167,9 @@
                                                         <img src="${data.lists[i].avatar}" />
                                                     </div>
                                                     <div class="text">
-                                                        <p class="name">${data.lists[i].userName}</p>
+                                                        <p class="name">${data.lists[i].nickname}</p>
                                                         <p>
-                                                            <span class="date">${data.lists[i].date}</span>
+                                                            <span class="date">${data.lists[i].addtime}</span>
                                                             <span class="del">${data.lists[i].del}</span>
                                                         </p>
                                                     </div>
@@ -169,37 +180,42 @@
                                                 </div>
                                             </li>
                                         `
-                            }
-                            // 为了测试，延迟1秒加载
-                            setTimeout(function () {
-                                $('.comment-list').html(result);
-                                // 每次数据加载完，必须重置
-                                me.resetload();
-                                // 重置索引值，重新拼接more.json数据
-                                counter = 0;
-                                // 解锁
-                                me.unlock();
-                                me.noData(false);
-                            }, 1000);
+                                }
+                                //为了测试，延迟1秒加载
+                                setTimeout(function () {
+                                    $('.comment-list').html(result);
+                                    // 每次数据加载完，必须重置
+                                    me.resetload();
+                                    // 重置索引值，重新拼接more.json数据
+                                    counter = 0;
+                                    // 解锁
+                                    me.unlock();
+                                    me.noData(false);
+                                }, 1000);
+
+                                page -= 1;
                         },
                         error: function (xhr, type) {
-                            alert('Ajax error!');
+                            // alert('Ajax error!');
                             // 即使加载出错，也得重置
                             me.resetload();
                         }
                     });
                 },
+                //进来加载
                 loadDownFn: function (me) {
                     $.ajax({
                         type: 'GET',
-                        url: 'json/more.json',
+                        // url: '/mobile/article/get_comment',
+                        url: '/mobile/article/get_comment',
                         dataType: 'json',
+                        data: {'id':id,'type':type,'page':page,'count':count},
                         success: function (data) {
+                            // console.log(data)
                             var result = '';
                             counter++;
                             pageEnd = num * counter;
-                            pageStart = pageEnd - num;
-
+                            // pageStart = pageEnd - num;
                             for (var i = pageStart; i < pageEnd; i++) {
                                 result += `
                                             <li class="comment-item">
@@ -208,9 +224,9 @@
                                                         <img src="${data.lists[i].avatar}" />
                                                     </div>
                                                     <div class="text">
-                                                        <p class="name">${data.lists[i].userName}</p>
+                                                        <p class="name">${data.lists[i].nickname}</p>
                                                         <p>
-                                                            <span class="date">${data.lists[i].date}</span>
+                                                            <span class="date">${data.lists[i].addtime}</span>
                                                             <span class="del">${data.lists[i].del}</span>
                                                         </p>
                                                     </div>
@@ -228,6 +244,7 @@
                                     me.noData();
                                     break;
                                 }
+                                page += 1;
                             }
                             // 为了测试，延迟1秒加载
                             setTimeout(function () {
@@ -237,7 +254,7 @@
                             }, 1000);
                         },
                         error: function (xhr, type) {
-                            alert('Ajax error!');
+                            // alert('Ajax error!');
                             // 即使加载出错，也得重置
                             me.resetload();
                         }
