--- a/application/index/view/login/login.html
+++ b/application/index/view/login/login.html
@@ -13,7 +13,7 @@
 <div class="login_bigger">
 	<!--头部-->
 	<div class="header">
-                <div class="inner-wrap">
+                <!-- <div class="inner-wrap">
                     <div class="logo">
                         <a href="index.html"></a>
                     </div>
@@ -27,21 +27,21 @@
                             <li><a href="/index/about/index">关于我们</a></li>
                         </ul>
                     </div>
-                    <div class="login">
+                    <div class="login"> -->
                         <!-- 未登录状态 -->
-                        <div class="login-out">
+                        <!-- <div class="login-out">
                             <a href="#">登录</a>
                             <a href="#">注册</a>
-                        </div>
+                        </div> -->
                         <!-- 登录状态 -->
-                        <div class="login-in">
+                        <!-- <div class="login-in">
                             <span class="fl"><img src="__STATIC__/images/public/user-avatar.png"></span>
                             <a class="fl" href="#">退出</a>
                         </div>
                        
                     </div>
-                </div>
-            </div>
+                </div> -->
+    </div>
 	
     <div class="inner-wrap inner-wrap22" >	
     	
@@ -111,6 +111,7 @@
 		
 	</div>
 	<script src="__STATIC__/js/public/footer.js"></script>
+	<script src="__STATIC__/js/public/header.js"></script>
 	<script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
 </div>
 
