--- a/application/index/view/login/login.html
+++ b/application/index/view/login/login.html
@@ -122,7 +122,11 @@
             $(this).addClass('select').siblings().removeClass('select');
             $('#con li').eq(i).show().siblings().hide();
         });
-        
+        // 退出登录
+        // $(".outBtn").click(function(){
+        //     $(".login-in").hide();
+        //     $(".login-out").show();
+        // })        
         // $(".login_denglu").click(function(){
         	
         	
