手机端：账户充值，jsapi 充值 --已完成

--- a/application/mobile/view/user/top_up.html
+++ b/application/mobile/view/user/top_up.html
@@ -20,7 +20,7 @@
 		<div class="wrap_frame">
 			<!--public head-->
 			<div class="lb_headWrap lb_headWrap_bacColor topBox_backgroundColor ">
-				<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
+				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/user/index'">
 					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png" />
 				</p>
 				<span>账户充值</span>
@@ -29,7 +29,7 @@
 			<div class="yuqian">
 				<div>
 					<p>余额</p>
-					<p>100000.00</p>
+					<p>{$info['money']}</p>
 				</div>
 			</div>
 
