--- a/application/index/view/buy/details.html
+++ b/application/index/view/buy/details.html
@@ -52,7 +52,7 @@
 						<!--价格-->
 						<div class="price">￥{$list['price']}</div>
 						<!--购买按钮-->
-						<div class="buy_btn">立即购买</div>
+						<a class="buy_btn" href="/index/buy/submit_order?id={$list.id}">立即购买</a>
 					</div>
 				</div>
 				
