--- a/application/mobile/view/user/my_walet.html
+++ b/application/mobile/view/user/my_walet.html
@@ -18,7 +18,7 @@
 	<div class="wrap_frame">
 			<!--public head-->
 			<div class="lb_headWrap lb_headWrap_bacColor topBox_backgroundColor ">
-				<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
+				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/user/index'">
 					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
 				</p>
 				<span>我的钱包</span>
