--- a/application/index/view/buy/submit_order.html
+++ b/application/index/view/buy/submit_order.html
@@ -33,6 +33,7 @@
 					<div class="right_zi">
 						<!--地址-->
 						<div class="shipping">
+                            <!-- 存储地区id -->
                             <input type="hidden" id="se-hid-area" value="" />
                             <input type="hidden" id="se-hid-area-id" value="" />
 							<ul>
@@ -57,6 +58,7 @@
 								<li>
 									<div class="form">所在地区：</div>
 									<div>
+
 										<select class="v-item" id="province" >
                                         <option value="0">请选择</option>
                                         {volist name="province" id="vo"}
@@ -71,7 +73,8 @@
 										<select class="v-item" id="district">
                                             <option value="0">请选择</option>
 										</select>
-									</div>
+                                    </div>
+                                    
 								</li>
 								<li>
 									<div class="form">详细地址：</div>
