--- a/application/index/view/login/login.html
+++ b/application/index/view/login/login.html
@@ -13,34 +13,6 @@
 <div class="login_bigger">
 	<!--头部-->
 	<div class="header">
-                <!-- <div class="inner-wrap">
-                    <div class="logo">
-                        <a href="index.html"></a>
-                    </div>
-                    <div class="nav">
-                        <ul>
-                            <li class="active"><a href="/index/index/index">首页</a></li>
-                            <li><a href="../my _genes/my_genes.html">我的基因</a></li>
-                            <li><a href="/index/buy/buy">购买</a></li>
-                            <li><a href="#">基因介绍</a></li>
-                            <li><a href="#">我的订单</a></li>
-                            <li><a href="/index/about/index">关于我们</a></li>
-                        </ul>
-                    </div>
-                    <div class="login"> -->
-                        <!-- 未登录状态 -->
-                        <!-- <div class="login-out">
-                            <a href="#">登录</a>
-                            <a href="#">注册</a>
-                        </div> -->
-                        <!-- 登录状态 -->
-                        <!-- <div class="login-in">
-                            <span class="fl"><img src="__STATIC__/images/public/user-avatar.png"></span>
-                            <a class="fl" href="#">退出</a>
-                        </div>
-                       
-                    </div>
-                </div> -->
     </div>
 	
     <div class="inner-wrap inner-wrap22" >	
@@ -67,25 +39,10 @@
 			            	<input placeholder="密码" type="password" id="password"  class="login_passworld"/>
 			            	<br />
 			            	<div class="login_remember">
-			            		<input type="checkbox" class="login_checkbox"/><span class="remenber_me" >记住我</span>
+			            		<!-- <input type="checkbox" class="login_checkbox"/><span class="remenber_me" >记住我</span> -->
 			            		<a class="login_findpassworld" style="color: rgb(55,175,230);"  href="/index/login/register">注册新用户</a><span class="login-resign" style="color: rgb(55,175,230);">找回密码</span>
 			            	</div>
 			            	<div class="login_denglu" onclick="submit();">登录</div>
-			            	<!--<div class="login_qita">
-			            
-			            		<span>其他账号登陆</span>
-			            		<span >
-			            			<img  src="__STATIC__/images/login/qq.png" class="login_img1"/>
-			            			<span class="qq">QQ登录</span>
-			            		</span>
-			            		<span >
-			            			<img src="__STATIC__/images/login/weibo.png" class="login_img2"/>
-			            			<span class="weibo">微博登录</span>
-			            			
-			            		</span>
-			            		
-			            	</div>-->
-			            	
 			            </li>
 			            <li style="display: none;" class="erweima_ear">
 			            	
