--- a/application/mobile/view/user/collection.html
+++ b/application/mobile/view/user/collection.html
@@ -19,33 +19,23 @@
 					</p>
 					<span>我的收藏</span>
 				</div>
+				{if condition = "isset($list)"}
+				{volist name="list" id="vo"}
 				<!--列表01-->
 				<div class="item">
 					<!--图片-->
 					<div class="imges">
-						<img src="__STATIC__/img/home/tupian1@2x.png" />
+						<img src="__IMAGES__goods/{$vo.thumb}" />
 					</div>
 					<!--右边-->
 					<div class="right">
-						<p>9787030584304 供中药学植物学 中药资源学 中药鉴定学等使用 普通高等教育</p>
+						<p>{$vo.name}</p>
 						<!--删除-->
 						<div class="remove">删除</div>
 					</div>
 				</div>
-				<!--列表02-->
-				<div class="item">
-					<!--图片-->
-					<div class="imges">
-						<img src="__STATIC__/img/home/tupian2@2x.png" />
-					</div>
-					<!--右边-->
-					<div class="right">
-						<p>9787030584304 供中药学植物学 中药资源学 中药鉴定学等使用 普通高等教育</p>
-						<!--删除-->
-						<div class="remove">删除</div>
-					</div>
-				</div>
-				
+                {/volist}   
+				{/if}
 			</div>
 		</div>
 		
