--- a/application/mobile/view/goods/goods_list.html
+++ b/application/mobile/view/goods/goods_list.html
@@ -27,7 +27,7 @@
         <div class="purchase_box">
 
             <!-- 商品列表 -->
-             {volist name="list" id="vo"}
+             {volist name="list" id="vo" empty="<p style='height:75px;line-height:75px;text-align: center;'>暂无数据！</p>"}
             <div class="purchase_list">
                 <div class="item-img">
                     <img src="__IMAGES__goods/{$vo.thumb}" alt="">
