修复后台运费模板数据变更后页面不刷新问题

--- a/application/admin/view/goods/add_freight.html
+++ b/application/admin/view/goods/add_freight.html
@@ -84,10 +84,11 @@
 {include file="layout/footer"}
 <script>
     function layermsg(msg,close){
-        layer.msg(msg)
+        layer.msg(msg);
         if(close > 0){
             setTimeout(function(){
-                parent.layer.closeAll();
+                // parent.layer.closeAll();
+                parent.open_closeAll();
             },2000);
         }
     }
